<resources>
    <string name="app_name">Lingvino</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="or">OR</string>
    <string name="facebook_app_id">1308216389327961</string>
    <string name="fb_login_protocol_scheme">fb1308216389327961</string>
    <string name="googleBtn">Sign in with Google</string>
    <string name="facebookBtn">Sign in with Facebook</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="wotd">Word of the Day</string>
    <string name="fav_words_title_en">Favourite words</string>
    <string name="fav_words_title_es">Palabras favoritas</string>
    <string name="fav_words_title_ru">Любимые слова</string>
    <string name="fav_words_title_bg">Любими думи</string>
    <string name="actionBarDeleteButton">Delete selected</string>
    <string name="search_words_en">Search for words…</string>
    <string name="search_words_es">Buscar palabras…</string>
    <string name="search_words_ru">Поиск слов…</string>
    <string name="search_words_bg">Търси думи…</string>
    <string name="search_translations_en">Search for translations…</string>
    <string name="search_translations_es">Busca traducciones…</string>
    <string name="search_translations_ru">Поиск переводов…</string>
    <string name="search_translations_bg">Търси преводи…</string>
    <string name="save_collection_en">Save to collection/s</string>
    <string name="save_collection_es">Guardar en colección/es</string>
    <string name="save_collection_ru">Сохранить в коллекцию/и</string>
    <string name="save_collection_bg">Запази в колекция/и</string>
    <string name="create_collection_en">Create collection</string>
    <string name="create_collection_es">Crear colección</string>
    <string name="create_collection_ru">Создать коллекцию</string>
    <string name="create_collection_bg">Създай колекция</string>
    <string name="create_en">Create</string>
    <string name="create_es">Crear</string>
    <string name="create_ru">Создать</string>
    <string name="create_bg">Създай</string>
    <string name="done_en">Done</string>
    <string name="done_es">Listo</string>
    <string name="done_ru">Готово</string>
    <string name="done_bg">Готово</string>
    <string name="cancel_en">Cancel</string>
    <string name="cancel_es">Cancelar</string>
    <string name="cancel_ru">Отмена</string>
    <string name="cancel_bg">Отмени</string>
    <string name="remove_en">Remove</string>
    <string name="remove_es">Eliminar</string>
    <string name="remove_ru">Удалять</string>
    <string name="remove_bg">Премахни</string>
    <string name="go_en">Go</string>
    <string name="go_es">Vamos</string>
    <string name="go_ru">Давай</string>
    <string name="go_bg">Давай</string>
    <string name="choose_collection_en">Choose collection:</string>
    <string name="choose_collection_es">Elige colección:</string>
    <string name="choose_collection_ru">Выберите коллекцию:</string>
    <string name="choose_collection_bg">Изберете колекция:</string>
    <string name="enter_collection_name_en">Enter collection name</string>
    <string name="enter_collection_name_es">Ingrese el nombre de la colección</string>
    <string name="enter_collection_name_ru">Введите название коллекции</string>
    <string name="enter_collection_name_bg">Въведете име на колекцията</string>
    <string name="translation_exists_en">Translation already exists in the collection.</string>
    <string name="translation_exists_es">La traducción ya existe en la colección.</string>
    <string name="translation_exists_ru">Перевод уже существует в коллекции.</string>
    <string name="translation_exists_bg">Преводът вече съществува в колекцията.</string>
    <string name="add_success_en">Successfully added to collection.</string>
    <string name="add_success_es">Se ha guardado correctamente en la colección.</string>
    <string name="add_success_ru">Успешно добавлено в коллекцию.</string>
    <string name="add_success_bg">Успешно добавено в колекцията.</string>
    <string name="translation_copy_en">Translation copied.</string>
    <string name="translation_copy_es">Traducción copiada.</string>
    <string name="translation_copy_ru">Перевод скопирован.</string>
    <string name="translation_copy_bg">Преводът беше копиран.</string>
    <string name="translation_copy_to_en">Translations copied to %1$s.</string>
    <string name="translation_copy_to_es">Traducciones copiadas a %1$s.</string>
    <string name="translation_copy_to_ru">Переводы скопированы в %1$s.</string>
    <string name="translation_copy_to_bg">Преводите бяха копирани в %1$s.</string>
    <string name="englishLang">English</string>
    <string name="bulgarianLang">Bulgarian</string>
    <string name="translation_hint_en">Text to translate…</string>
    <string name="translation_hint_es">Texto para traducir…</string>
    <string name="translation_hint_ru">Текст для перевода…</string>
    <string name="translation_hint_bg">Текст за превод…</string>
    <string name="copy_items_en">Copy selected items to:</string>
    <string name="copy_items_es">Copie los elementos seleccionados a:</string>
    <string name="copy_items_ru">Скопируйте выбранные элементы в:</string>
    <string name="copy_items_bg">Копирайте избраните елементи в:</string>
    <string name="translatorTitle">Translator</string>
    <string name="cameraBtn">Camera</string>
    <string name="voiceBtn">Voice</string>
    <string name="translateBtn">Translate</string>
    <string name="spoken_lang_en">I speak</string>
    <string name="spoken_lang_es">Yo hablo</string>
    <string name="spoken_lang_ru">Я говорю</string>
    <string name="spoken_lang_bg">Аз говоря</string>
    <string name="target_lang_en">I want to learn</string>
    <string name="target_lang_es">Quiero aprender</string>
    <string name="target_lang_ru">Хочу учиться</string>
    <string name="target_lang_bg">Искам да науча</string>
    <string name="continue_btn_en">Continue</string>
    <string name="continue_btn_es">Seguir</string>
    <string name="continue_btn_ru">Продолжить</string>
    <string name="continue_btn_bg">Продължи</string>
    <string name="and">and</string>
    <string name="language_options">Language Options</string>
    <string name="savedTranslations">Saved translations</string>
    <string name="actionBarPronounceButton">Pronounce selection</string>
    <string name="allLanguagesFilter">All languages</string>
    <string name="calendarViewTitle">Calendar View</string>
    <string name="wotdCalendar">Word of the Day Calendar</string>
    <string name="actionBarMoveButton">Move to</string>
    <string name="quizTitle">Quiz Game</string>
    <string name="quizLeaderboardTitle">Quiz Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="question">Question</string>
    <string name="correct_en">Correct!</string>
    <string name="correct_es">¡Correcto!</string>
    <string name="correct_ru">Правильно!</string>
    <string name="correct_bg">Правилно!</string>
    <string name="next_en">Next</string>
    <string name="next_es">Próximo</string>
    <string name="next_ru">Следующий</string>
    <string name="next_bg">Следващ</string>
    <string name="time_up_en">Time up!</string>
    <string name="time_up_es">¡Se acabó el tiempo!</string>
    <string name="time_up_ru">Время вышло!</string>
    <string name="time_up_bg">Времето изтече!</string>
    <string name="play_again_en">Play again</string>
    <string name="play_again_es">Juega de nuevo</string>
    <string name="play_again_ru">Играть снова</string>
    <string name="play_again_bg">Играй отново</string>
    <string name="wrong_en">Incorrect!</string>
    <string name="wrong_es">¡Incorrecto!</string>
    <string name="wrong_ru">Неправильно!</string>
    <string name="wrong_bg">Неправилно!</string>
    <string name="victory_en">Well done!</string>
    <string name="victory_es">¡Bien hecho!</string>
    <string name="victory_ru">Отлично сработано!</string>
    <string name="victory_bg">Справи се отлично!</string>
    <string name="pick_topic_en">Pick a topic:</string>
    <string name="pick_topic_es">Elige un tema:</string>
    <string name="pick_topic_ru">Выбрать тему:</string>
    <string name="pick_topic_bg">Избери тема:</string>
    <string name="leaderboard_position">#</string>
    <string name="leaderboard_username">USERNAME</string>
    <string name="leaderboard_month_desc">MONTH &#x25bc;</string>
    <string name="leaderboard_month">MONTH</string>
    <string name="leaderboard_month_asc">MONTH &#x25b2;</string>
    <string name="leaderboard_year_desc">YEAR &#x25bc;</string>
    <string name="leaderboard_year">YEAR</string>
    <string name="leaderboard_year_asc">YEAR &#x25b2;</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="wotd_info_en">Learn a new word on a daily basis! Play the pronunciations and see the example sentences.</string>
    <string name="wotd_info_es">¡Aprende una nueva palabra a diario! Escucha las pronunciaciones y mira las oraciones de ejemplo.</string>
    <string name="wotd_info_ru">Выучите новое слово ежедневно! Слушать произношения и посмотрите примеры предложений.</string>
    <string name="wotd_info_bg">Научете нова дума ежедневно! Пуснете си произношенията и вижте примерните изречения.</string>
    <string name="translator_info_en">Translate using your camera, voice or input! Save your translations into custom collections.</string>
    <string name="translator_info_es">¡Traduce usando tu cámara, voz o texto! Guarde tus traducciones en colecciones personalizadas.</string>
    <string name="translator_info_ru">Переведите, используя вашу камеру, голос или текст! Сохраните ваши переводы в ваших коллекциях.</string>
    <string name="translator_info_bg">Превеждайте с помощта на вашата камера, глас или текст! Запазете преводите си в колекции.</string>
    <string name="quiz_info_en">Pick a topic and enrich your vocabulary by playing quiz game! Look at the leaderboard.</string>
    <string name="quiz_info_es">¡Elige un tema y enriquece tu vocabulario jugando cuestionarios! Mira la tabla de clasificación.</string>
    <string name="quiz_info_ru">Выберите тему и улучшить свой словарный запас, играя в викторины! Посмотрите на таблицу лидеров.</string>
    <string name="quiz_info_bg">Изберете тема и обогатете речника си, като играете на викторини! Вижте класацията.</string>
    <string name="lang_options_info_en">Update the source and target languages to fit your preferences at any point in time!</string>
    <string name="lang_options_info_es">¡Actualice los ajustes de idioma de acuerdo a tu preferencias!</string>
    <string name="lang_options_info_ru">Обновите языковые настройки в соответствии с вашими предпочтениями!</string>
    <string name="lang_options_info_bg">Обновете езиковите настройки за да съвпаднат с вашите предпочитания по всяко време!</string>
    <string name="welcome_message_en">Welcome, %1$s!</string>
    <string name="welcome_message_es">Bienvenido, %1$s!</string>
    <string name="welcome_message_ru">Добро пожаловать, %1$s!</string>
    <string name="welcome_message_bg">Добре дошъл, %1$s!</string>
</resources>
