<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/inputsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName">

        <EditText
            android:id="@+id/emailET"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLength="30" />

        <EditText
            android:id="@+id/passwordET"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailET"
            android:layout_marginBottom="30dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16" />

        <Button
            android:id="@+id/loginBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordET"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/loginBtn"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@id/orTV"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/orTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_textview"
            android:padding="10dp"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/orTV"
            android:background="@color/colorPrimary" />

        <FrameLayout
            android:id="@+id/facebookFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orTV"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/facebookBtnCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4267b2"
                android:drawableStart="@drawable/ic_facebook"
                android:drawablePadding="15dp"
                android:text="@string/facebookBtn"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/googleFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebookFrame"
            android:layout_alignStart="@id/facebookFrame"
            android:layout_alignEnd="@id/facebookFrame"
            android:layout_marginTop="10dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googleBtnCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/googleBtn"
                android:textAllCaps="false" />

        </FrameLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>