<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboardRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/position"
            style="@style/LeaderboardHeaderStyle"
            android:text="@string/leaderboard_position"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:id="@+id/email"
            style="@style/LeaderboardHeaderStyle"
            android:text="@string/leaderboard_email"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/currentMonthScore"
            app:layout_constraintStart_toEndOf="@+id/position"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/currentMonthScore"
            style="@style/LeaderboardHeaderStyle"
            android:text="@string/leaderboard_month"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yearlyScore"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/yearlyScore"
            style="@style/LeaderboardHeaderStyle"
            android:text="@string/leaderboard_year"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentMonthScore"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboardRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerCL" />

</androidx.constraintlayout.widget.ConstraintLayout>